[gd_scene load_steps=25 format=3 uid="uid://dy3raii4675j3"]

[ext_resource type="Script" path="res://scene/fight/unit_fight_node.gd" id="1_0776r"]
[ext_resource type="SpineAtlasResource" uid="uid://7e13ijjsrfi3" path="res://asset/spine/unit/unit.atlas" id="2_7jm5i"]
[ext_resource type="Texture2D" uid="uid://d0peyhycytnuv" path="res://asset/img/ui/common/hp_progress_bar_over.png" id="2_uojk8"]
[ext_resource type="SpineSkeletonFileResource" path="res://asset/spine/unit/unit.spjson" id="3_g5exj"]
[ext_resource type="Texture2D" uid="uid://cru5jcs5oui7q" path="res://asset/img/ui/common/hp_progress_bar.png" id="3_xbmj4"]
[ext_resource type="Texture2D" uid="uid://cesgsntgbx0i6" path="res://asset/img/ui/icon/order_1.png" id="4_jxnxi"]
[ext_resource type="Texture2D" uid="uid://raat26avyhkd" path="res://asset/img/ui/icon/current_pointer.png" id="4_rhtj4"]
[ext_resource type="PackedScene" uid="uid://0sknuifahe1i" path="res://scene/common/map_item_view/cd_hbox.tscn" id="5_7l44n"]
[ext_resource type="Texture2D" uid="uid://bsouy3n7efrwo" path="res://asset/img/ui/common/passive_cd.png" id="5_e5vx4"]
[ext_resource type="Script" path="res://scene/common/map_item/unit/passive_cd_panel_cntr.gd" id="5_j3l06"]
[ext_resource type="Texture2D" uid="uid://dj22n1hnkycb7" path="res://asset/img/ui/fight_scene/skill_slot_panel.png" id="5_lh2br"]
[ext_resource type="Script" path="res://scene/common/map_item/unit/skill_slot_panel_cntr.gd" id="6_1mteh"]
[ext_resource type="Texture2D" uid="uid://bxuruiwuc5iwk" path="res://asset/img/ui/fight_scene/skill_slot.png" id="6_13uum"]
[ext_resource type="Texture2D" uid="uid://dhw2ig7x8hk34" path="res://asset/img/ui/fight_scene/add_icon.png" id="8_pjxbi"]
[ext_resource type="Texture2D" uid="uid://2w4jl4h52qpv" path="res://asset/img/ui/icon/turn_op.png" id="9_chhkg"]
[ext_resource type="Texture2D" uid="uid://dmek4o4ptx6ti" path="res://asset/img/ui/icon/put_skill_op.png" id="10_qkgj7"]
[ext_resource type="Texture2D" uid="uid://dr6spdqgbxbo6" path="res://asset/img/ui/icon/attack_op.png" id="11_q6oia"]
[ext_resource type="Texture2D" uid="uid://csp270qb1cga2" path="res://asset/img/ui/icon/standby_op.png" id="12_id7os"]
[ext_resource type="Texture2D" uid="uid://c5e3hpkb4eatk" path="res://asset/img/ui/icon/move_left_op.png" id="13_vlw2y"]
[ext_resource type="Texture2D" uid="uid://bk2cbyebx4b11" path="res://asset/img/ui/icon/move_right_op.png" id="14_igeos"]

[sub_resource type="SpineSkeletonDataResource" id="SpineSkeletonDataResource_pxtho"]
atlas_res = ExtResource("2_7jm5i")
skeleton_file_res = ExtResource("3_g5exj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m1l26"]
texture = ExtResource("5_e5vx4")
texture_margin_left = 5.95728
texture_margin_top = 4.0
texture_margin_right = 6.04119
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pvi42"]
texture = ExtResource("5_lh2br")
texture_margin_left = 17.0
texture_margin_top = 16.8399
texture_margin_right = 17.0
texture_margin_bottom = 38.0

[sub_resource type="BlackboardPlan" id="BlackboardPlan_rqh2r"]

[node name="unit_fight_node" type="Node2D"]
script = ExtResource("1_0776r")

[node name="spine" type="SpineSprite" parent="."]
skeleton_data_res = SubResource("SpineSkeletonDataResource_pxtho")
preview_skin = "cat_man"
preview_animation = "-- Empty --"
preview_frame = false
preview_time = 0.0

[node name="ammo_bone" type="SpineBoneNode" parent="spine"]
show_behind_parent = true
position = Vector2(0, -60)
bone_name = "ammo"
bone_mode = 1

[node name="passive_cd_panel_cntr" type="PanelContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.99924
offset_top = 1.0
offset_right = 7.99924
offset_bottom = 21.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m1l26")
script = ExtResource("5_j3l06")

[node name="cd_hbox" parent="passive_cd_panel_cntr" instance=ExtResource("5_7l44n")]
layout_mode = 2

[node name="order_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 30)
texture = ExtResource("4_jxnxi")

[node name="current_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -150)
texture = ExtResource("4_rhtj4")

[node name="hp_progress_bar" type="TextureProgressBar" parent="."]
offset_left = -60.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 74.0
max_value = 12.0
value = 12.0
texture_over = ExtResource("2_uojk8")
texture_progress = ExtResource("3_xbmj4")

[node name="hp_label" type="Label" parent="hp_progress_bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="skill_slot_panel_cntr" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(142, 160)
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_pvi42")
script = ExtResource("6_1mteh")

[node name="vbox" type="VBoxContainer" parent="skill_slot_panel_cntr"]
layout_mode = 2

[node name="add_skill_slot_patch" type="NinePatchRect" parent="skill_slot_panel_cntr/vbox"]
visible = false
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
texture = ExtResource("6_13uum")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="add_icon_tex_rect" type="TextureRect" parent="skill_slot_panel_cntr/vbox/add_skill_slot_patch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_pjxbi")

[node name="move_left_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("13_vlw2y")
offset = Vector2(-14, 0)

[node name="move_right_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("14_igeos")
offset = Vector2(14, 0)

[node name="standby_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("12_id7os")

[node name="turn_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("9_chhkg")

[node name="put_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("10_qkgj7")

[node name="attack_op_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -140)
texture = ExtResource("11_q6oia")

[node name="bt_player" type="BTPlayer" parent="."]
update_mode = 2
blackboard_plan = SubResource("BlackboardPlan_rqh2r")

[connection signal="skill_added" from="skill_slot_panel_cntr" to="." method="_on_skill_slot_panel_cntr_skill_added"]
[connection signal="skill_moved" from="skill_slot_panel_cntr" to="." method="_on_skill_slot_panel_cntr_skill_moved"]
[connection signal="skill_removed" from="skill_slot_panel_cntr" to="." method="_on_skill_slot_panel_cntr_skill_removed"]
